--- a/index.html
+++ b/index.html
@@ -42,33 +42,24 @@
         <div class="row" style="padding: 0%;">
             <div class="col-lg-4">
                 <p><h4>Programming links:</h4><br>
-                <a href="https://docs.google.com/document/d/e/2PACX-1vQnP5GDXd2YmuUapbnNgaUAK-4gsDtZGDl-qZT-g3xsUCSvPhfr1OTdo7esf_b3qm3ypfQSwMuz5Mab/pub">Programmering 3sem</a> Datamatiker <br />
-                <a href="https://docs.google.com/document/d/e/2PACX-1vQSdR7ZSr7DfFCc8SC0tSqz8VaLKHN8LCGRmfxTFVnl1GgkHnk_Wr_-7r_Lr5EX-qpOt7sBzo6SmHH0/pub">Mobile Application Development</a>, 4th semester Comp Science<br>
-                <!--a href="election2018spring/index.html">Valgfags-valg</a><br-->
-                <a href="internship/index.html">Internship</a>, 5th semester, Comp Science<br>
-                <a href="dissertation2020spring/">Dissertation course</a> <br />
-                Dissertations, Computer Science<br>
+                    <a href="http://msdn.microsoft.com/en-us/library/618ayhy6.aspx">Microsoft C# reference</a><br>
+                    <a href="http://msdn.microsoft.com/en-us/library/67ef8sbd.aspx">Microsoft C# programming guide</a><br>
+                    <a href="https://docs.oracle.com/javase/8/docs/api/"> JAVA Documentation</a>, (version8)<br>
+                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html"> Java
+                        developement Kit downloads </a> <br />
             </div>
             <div class="col-lg-4">
                 <p><h4>Study links:</h4><br>
-                    <a href="mobile2019spring/index.html"> Mobile Application Development</a>, 4th semester Comp Science<br>
-                    <!--a href="election2018autumn/index.html">Valgfags-valg</a><br /-->
-                    <a href="internship/index.html">Internship</a>, 5th semester, Comp Science<br>
-                    <a href="dissertation2019spring/">Dissertation course</a>
+                    <a href="https://helpdesk.easj.dk">Vejledninger,Mail,office365</a><br>
+                    <a href="https://moodle.zealand.dk">Intranet / Moodle</a> (incl schedule / inkl skema)
                     <br />
-                  Dissertations, Computer Science
             </div>
             <div class="col-lg-4">
                 <p><h4>Archive:</h4><br />
-                    <a href="prog3_2018autumn/index.html">Programming, 3rd semester, Comp Science</a><br />
-                    <a href="mobile2018autumn/index.html">
-                    Mobile Application Development</a>, 4th semester Comp Science<br>
-                    <!--a href="election2018autumn/index.html">Valgfags-valg</a><br /-->
-                    <a href="internship/index.html">Internship</a>, 5th semester, Comp Science<br>
-                    <a href="dissertation2018autumn/">Dissertation course</a>
+                    <a href="http://pele-easj.dk/archive.htm">Tidligere undervisning</a><br />
+                    <a href="http://pele-easj.dk/archive.htm">Previous courses</a>
                     <br />
-                Dissertations, Computer Science<br />
-                <a href="undervisning/">Previous semesters</a>
+                    HF brobygning <a href="http://pele-easj.dk/downs/BigDataHFBro.pdf">Slides</a> | <a href="http://pele-easj.dk/downs/Opgaver-BigData.pdf">Opgave</a> | <a href="http://pele-easj.dk/downs/HF-Case-Opgave.pdf">Case opgave</a>
             </div>
         </div>
         </div>
